--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/SHGJ/HFCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/SHGJ/HFCZ.css
@@ -97,7 +97,7 @@
 .span_content_gxzf {
     font-size: 16px;
     border: none;
-    color: #ff6100;
+    color: #bc6ba6;
 }
 
 .div_content_info_left {
