--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
@@ -159,7 +159,7 @@
 }
 
     .active:hover {
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .div_no_info {
@@ -178,7 +178,7 @@
 }
 
 .span_new_info_body_middle_common_button:hover {
-    color: #ff6100;
+    color: #bc6ba6;
 }
 
 .span_new_info_body_middle_status {
