--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/XXGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/XXGL.css
@@ -81,7 +81,7 @@
 }
 
     .a_main_info_xxnr:hover {
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .a_main_info_xxnr_yd {
@@ -93,7 +93,7 @@
 }
 
     .a_main_info_cz:hover {
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .span_main_info_head_gjt {
