--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/XXGLMX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/XXGLMX.css
@@ -77,7 +77,7 @@
 
     .span_main_info_head_fhsyj:hover {
         text-decoration: none;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .span_main_info_head_right {
@@ -90,5 +90,5 @@
 
     .span_main_info_head_right:hover {
         text-decoration: none;
-        color: #ff6100;
+        color: #bc6ba6;
     }
