--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/ZHBD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/ZHBD.css
@@ -91,7 +91,7 @@
     margin-top: 13px;
     cursor: pointer;
     margin-left: 700px;
-    background-color: #ff6100;
+    background-color: #bc6ba6;
     width: 90px;
     height: 32px;
     border-radius: 4px;
