--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -69,13 +69,13 @@
                 </li>
                 <li id="li_left_menu_WDFB" class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
                 <li id="li_left_menu_WDSC" class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
-                <li id="li_left_menu_WDQZ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span><img id="imgWDQZ" src="@Url.Content("~/Areas/Business/Css/images/down.png")" class="img_left_menu_second" /></li>
+                <li id="li_left_menu_WDQZ" class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span></li>
                 <li id="li_left_menu_WDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
                 <li id="li_left_menu_TDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
                 <li id="li_left_menu_GZYQ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
                 <li id="li_left_menu_JLRZ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanJLRZ">简历认证</span></li>
                 <li id="li_left_menu_WDHD" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDHD">我的互动</span></li>
-                <li id="li_left_menu_WDZP" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span><img id="imgWDZP" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
+                <li id="li_left_menu_WDZP" class="li_left_menu"><span class="span_left_menu_second" id="spanWDZP">我的招聘</span></li>
                 <li id="li_left_menu_ZWGL" class="li_left_menu"><img id="imgZWGL" class="img_left_menu_third" /><span class="span_left_menu_third WDZP_child" id="spanZWGL">职位管理</span></li>
                 <li id="li_left_menu_QZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanQZZW">全职职位</span></li>
                 <li id="li_left_menu_JZZW" class="li_left_menu"><span class="span_left_menu_four ZWGL_child" id="spanJZZW">兼职职位</span></li>
