--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_FBGZLTZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_FBGZLTZ.css
@@ -92,7 +92,7 @@
 
     .span_body_nav:hover {
         cursor: pointer;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .childnode {
@@ -127,13 +127,13 @@
 }
 
 .highlight {
-    color: #ff6100;
+    color: #bc6ba6;
     font-weight: 700;
 }
 
     .highlight:hover {
         text-decoration: none;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .cursor {
@@ -144,7 +144,7 @@
     .cursor:hover {
         text-decoration: underline;
         cursor: pointer;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .span_body_nav_img {
