--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_XXBSC.css
@@ -103,7 +103,7 @@
 
     .span_body_nav:hover {
         cursor: pointer;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .childnode {
@@ -137,13 +137,13 @@
 }
 
 .highlight {
-    color: #ff6100;
+    color: #bc6ba6;
     font-weight: 700;
 }
 
     .highlight:hover {
         text-decoration: none;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .cursor {
@@ -154,7 +154,7 @@
     .cursor:hover {
         text-decoration: underline;
         cursor: pointer;
-        color: #ff6100;
+        color: #bc6ba6;
     }
 
 .span_body_nav_img {
