--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/SHGJ/YXCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/SHGJ/YXCZ.css
@@ -101,7 +101,7 @@
 }
 
 .span_content_info_cxxz:hover {
-    color: #ff6100;
+    color: #bc6ba6;
 }
 
 .div_content_info_right_mz {
@@ -114,7 +114,7 @@
 .input_content_sj {
     font-size: 16px;
     border: none;
-    color: #ff6100;
+    color: #bc6ba6;
     height: 40px;
 }
 
