--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -32,15 +32,15 @@
             <span id="span_dl" class="span_top_right">
                 您好，请登录
             </span>
-            <span id="span_yhm" class="span_top_right">
-            </span>
+            <div id="div_yhm" class="span_top_right">
+            </div>
             <span class="span_top_right_split"></span>
             <span id="span_zc" class="span_top_right">
                 免费注册
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_grzx" class="span_top_right">
-                个人中心
+                我的小镇
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_bzzx" class="span_top_right">
