--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
@@ -8,7 +8,7 @@
 /*顶部_右侧*/
 .div_top .div_top_right {padding-right: 10px;text-align: center;height: 25px;padding-top: 10px;float: right;}
 .div_top .div_top_right .div_top_right_inner {cursor: pointer;float: left;display: inline-block;position: relative;}
-.div_top .div_top_right .div_top_right_dropdown_yhm {position: absolute;top: 0;left: 0;display: none;}
+.div_top .div_top_right .div_top_right_dropdown_yhm {position: relative;top: 0;left: 0;display: none;}
 .div_top .div_top_right .div_top_right_dropdown_yhm .ul_top_right_yhm {width: 70px;height: 150px;padding-left: 0px;margin-top: 20px;}
 .div_top .div_top_right .div_top_right_dropdown_yhm .ul_top_right_yhm .li_top_right_yhm {width: 70px;height: 30px;font-size: 12px;text-align: left;background-color: #ffffff;padding: 5px 5px;}
 .div_top .div_top_right .div_top_right_dropdown_yhm .ul_top_right_yhm .li_top_right_yhm:hover {background: #ececec;color: #333333;}
