--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_YHSYXY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_YHSYXY.css
@@ -173,7 +173,7 @@
     font-weight: bold;
     display: block;
     width: 100%;
-    height: 60px;
+    height: auto;;
     padding-top: 10px;
 }
 
