--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -75,7 +75,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第九条</td>
-                    <td class="td_content">本总则是《信息小镇使用协议》、《信息小镇推广用户服务协议》的有效组成部分，本总则未涉及的事项按照《信息小镇使用协议》、《信息小镇推广用户服务协议》相关约定处理。</td>
+                    <td class="td_content">本总则是《信息小镇用户使用协议》、《信息小镇推广用户服务协议》的有效组成部分，本总则未涉及的事项按照《信息小镇用户使用协议》、《信息小镇推广用户服务协议》相关约定处理。</td>
                 </tr>
                 <tr>
                     <td colspan="2">
