--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
@@ -18,11 +18,11 @@
     <div class="div_body">
         <div class="div_body_nav_title" id="div_body_nav_title_1">信息小镇用户使用协议</div>
         <div class="div_body_nav_text">
-            <span class="span_body_nav_text_title">&nbsp;&nbsp;&nbsp;&nbsp;您好，信息小镇是福建天问信息技术有限公司旗下的网站，为注册成为信息小镇的用户并使用信息小镇提供的服务，您应该仔细阅读并同意《信息小镇使用协议》。</span>
+            <span class="span_body_nav_text_title">&nbsp;&nbsp;&nbsp;&nbsp;您好，信息小镇是福建天问信息技术有限公司旗下的网站，为注册成为信息小镇的用户并使用信息小镇提供的服务，您应该仔细阅读并同意《信息小镇用户使用协议》。</span>
             <span class="span_body_nav_text_title">一、关于协议</span>
             <span class="span_body_nav_text_title">
-                1、本协议是信息小镇与用户之间的法律协议，请您在注册之前，务必谨慎阅读并充分理解其中的条款。当您点击已阅读并同意《信息小镇使用协议》，注册成为信息小镇的用户并使用信息小镇提供的服务，即表示您自愿接受本协议，认可本协议全部条款内容,并自觉遵守协议的内容。<br />
-                2、当您违反了《信息小镇使用协议》里的相关条约，您不应当以信息小镇未对本协议以合理方式提醒用户注意或未根据用户要求尽到说明义务为理由而声称或要求法院或其它任何第三方确认相关条款非法或无效。<br />
+                1、本协议是信息小镇与用户之间的法律协议，请您在注册之前，务必谨慎阅读并充分理解其中的条款。当您点击已阅读并同意《信息小镇用户使用协议》，注册成为信息小镇的用户并使用信息小镇提供的服务，即表示您自愿接受本协议，认可本协议全部条款内容,并自觉遵守协议的内容。<br />
+                2、当您违反了《信息小镇用户使用协议》里的相关条约，您不应当以信息小镇未对本协议以合理方式提醒用户注意或未根据用户要求尽到说明义务为理由而声称或要求法院或其它任何第三方确认相关条款非法或无效。<br />
                 3、当您注册成为信息小镇的用户或以其他信息小镇的方式实际使用信息小镇平台服务时，您应当是具备相应民事行为能力的自然人、法人或其他组织。若您不具备前述主体资格，则您及您的家长或法定监护人应承担因此而导致的一切后果，且信息小镇有权注销您的账户，并向您及您的监护人索偿<br />
                 4、信息小镇有权根据国家法律变动或自身需要不时地修改本协议，并以在网站公示的方式进行通知；如用户不同意相关变更内容，请停止使用信息小镇服务。如果用户继续享用服务，则视为无条件接受本协议条款的变动。<br />
             </span>
@@ -38,7 +38,7 @@
                 4) 遭遇不可抗力时，信息小镇有权单方面终止提供服务。<br />
                 5) 用户理解并同意，即便在本协议终止及用户的服务被终止后，信息小镇仍有权继续要求用户承担其在使用信息小镇平台服务期间因违反法律法规及本协议而应承担的责任。<br />
             </span>
-            <span class="span_body_nav_text_title">三、信息小镇服务使用规范</span>
+            <span class="span_body_nav_text_title">三、关于服务使用规范</span>
             <span class="span_body_nav_text_title">
                 1、通过信息小镇服务平台，您可以按照信息小镇的规则发布信息。但所发布的信息不得含有以下内容：<br />
                 1) 反对宪法所确定的基本原则，煽动抗拒、破坏宪法和法律、行政法规实施的；<br />
