--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -102,7 +102,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;4、信息小镇网官方渠道：指信息小镇网提供给用户进行充值支付的渠道，包括用户在信息小镇网上的在线充值渠道，及用户从信息小镇处购买并能提供有效协议、发票等合法凭证后实现账户内充值的渠道。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;5、信息小镇充值类型：指信息小镇网根据不同的服务类型、服务对象等为用户提供的不同的充值类型和方式。包括小镇交易宝、小镇余额、小镇推广余额等，在信息小镇网和本协议中亦称“余额类型”。上述一种或多种充值类型通称为“余额”或“充值余额”。<br />
             二、本协议的组成、变更及生效<br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;1、信息小镇网站及用户后台发布的推广服务相关的各服务协议、服务条款、操作规则、审核规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分，信息小镇按照本协议、推广服务相关的各项规则为广大用户提供信息小镇服务。本协议是《信息小镇使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇使用协议》处理。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、信息小镇网站及用户后台发布的推广服务相关的各服务协议、服务条款、操作规则、审核规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分，信息小镇按照本协议、推广服务相关的各项规则为广大用户提供信息小镇服务。本协议是《信息小镇用户使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇用户使用协议》处理。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;2、用户欲使用、接受信息小镇服务，请事先认真阅读本协议中各条款。您勾选同意或者点击确认即视为接受本协议内容，同意签署本协议。如果您不同意本协议的约定，应立即停止使用信息小镇服务。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;3、您确认信息小镇将有权对您提交的资质和相关内容进行审核，您了解并同意，如您提交的资质虚假或者您的推广内容违反国家法律法规的相关规定或者违反信息小镇的审核规则，信息小镇将有权拒绝为您提供服务。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;4、信息小镇有权根据国家法律法规的更新、产品和服务规则的调整需要不时地制订、修改本协议及/或相关规则，并以网站公示的方式进行公示。如您继续使用信息小镇的服务，即表示您接受经修订的协议和规则。如发生有关争议时，以最新的信息小镇用户服务协议为准。<br/>
