--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -174,7 +174,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;信息小镇现金服务协议（以下简称“本协议”）是信息小镇用户（以下亦称“用户”或“您”）与信息小镇之间的法律协议。本协议是用户登录信息小镇账号并充值支付以便购买使用信息小镇网络信息及推广服务时适用的通用条款。因此，请您在充值信息小镇现金前，仔细地阅读本协议的所有内容，您需要了解并同意以下条款所述事项才能完成充值支付、享受信息小镇网的现金服务（以下简称“信息小镇现金服务”）功能。如果您不同意本协议的约定，应立即停止使用信息小镇现金服务。无论您事实上是否认真阅读，只要您勾选同或点击确认本协议，或者实际接受了信息小镇现金服务，就表示您已接受了本协议及信息小镇网公布的信息小镇现金相关的服务协议和服务规则及信息小镇以站内公告、站内信、手机短信、用户后台或您填写的其他联系方式向您通知/送达的信息小镇相关规则、政策、通知（合称“信息小镇平台规则”）等信息，并愿意受其约束。如果发生纠纷，您不能以未仔细阅读为由进行抗辩。
             </div>
             <div class="div_body_text">
-                &nbsp;&nbsp;&nbsp;&nbsp;本协议是《信息小镇使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇使用协议》处理。信息小镇现金服务协议适用于您充值信息小镇现金和使用信息小镇现金购买信息小镇平台产品服务的充值和款项结算。
+                &nbsp;&nbsp;&nbsp;&nbsp;本协议是《信息小镇用户使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇用户使用协议》处理。信息小镇现金服务协议适用于您充值信息小镇现金和使用信息小镇现金购买信息小镇平台产品服务的充值和款项结算。
             </div>
             <div class="div_body_text">
                 一、充值支付及信息小镇现金服务使用约定
