--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/MMSZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/MMSZ.cshtml
@@ -18,7 +18,7 @@
             <table class="table_div_body">
                 <tr class="tr_div_body">
                     <td class="td_div_body">
-                        <span style="display: inline-block; height: 30px;">用户名：</span>
+                        <span class="span_div_body_left">用户名：</span>
                         <input type="text" id="inputYHM" class="input_content_label">
                     </td>
                     <td class="Info" id="YHMInfo"></td>
@@ -26,7 +26,7 @@
                 <tr class="tr_div_body">
                     <td class="td_div_body">
                         <span class="span_required">*</span>
-                        <span style="display: inline-block; height: 30px;">旧密码：</span>
+                        <span class="span_div_body_left">旧密码：</span>
                         <input class="input_content" type="password" id="inputJMM" maxlength="20" placeholder="请输入旧密码">
                     </td>
                     <td class="Info" id="JMMInfo"></td>
@@ -34,7 +34,7 @@
                 <tr class="tr_div_body">
                     <td class="td_div_body">
                         <span class="span_required">*</span>
-                        <span style="display: inline-block; height: 30px;">新密码：</span>
+                        <span class="span_div_body_left">新密码：</span>
                         <input class="input_content" type="password" id="inputXMM" maxlength="20" placeholder="请输入新密码">
                     </td>
                     <td class="Info" id="XMMInfo"></td>
@@ -42,7 +42,7 @@
                 <tr class="tr_div_body">
                     <td class="td_div_body">
                         <span class="span_required">*</span>
-                        <span style="display: inline-block; height: 30px;">确认密码：</span>
+                        <span class="span_div_body_left">确认密码：</span>
                         <input class="input_content" type="password" id="inputQRMM" maxlength="20" placeholder="请输入确认密码">
                     </td>
                     <td class="Info" id="QRMMInfo"></td>
