--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/MMSZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/MMSZ.css
@@ -1,110 +1,31 @@
-﻿.div_content {
-    border: 1px solid #f0f0f0;
-    height: 362px;
-}
+﻿.div_content {border: 1px solid #f0f0f0;height: 362px;}
 
-.div_head {
-    background-color: #fafafa;
-    height: 30px;
-    display: block;
-    padding-top: 4px;
-}
+.div_head {background-color: #fafafa;height: 30px;display: block;padding-top: 4px;}
 
-.span_head {
-    color: #000;
-    font-size: 14px;
-    font-weight: 700;
-    margin-left: 15px;
-   float: left;
-}
+.span_head {color: #000;font-size: 14px;font-weight: 700;margin-left: 15px; float: left;}
 
-.span_head_wjmm {
-    cursor: pointer;
-    color: #595757;
-    font-size: 12px;
-    float: left;
-    margin-top: 2px;
-    margin-left: 10px;
-}
+.span_head_wjmm {cursor: pointer;color: #595757;font-size: 12px;float: left;margin-top: 2px;margin-left: 10px;}
 
-.span_head_wjmm:hover {
-    color: #bc6ba6;
-}
+.span_head_wjmm:hover {color: #bc6ba6;}
 
-.table_div_body {
-    width: 900px;
-    margin-top: 30px;
-}
+.table_div_body {width: 900px;margin-top: 30px;}
 
-.tr_div_body {
-    height: 50px;
-    width: 900px;
-}
+.table_div_body .tr_div_body {height: 50px;width: 900px;}
 
-.td_div_body {
-    height: 50px;
-    width: 650px;
-    text-align: right;
-}
+.table_div_body .tr_div_body .td_div_body {height: 50px;width: 650px;text-align: right;}
 
-.input_content {
-    width: 400px;
-    cursor: default;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    height: 34px;
-    padding: 4px 12px;
-    display: inline-block;
-    cursor: text;
-}
+.table_div_body .tr_div_body .td_div_body .span_div_body_left {display:inline-block;}
 
-    
+.input_content {width: 400px;cursor: default;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 4px 12px;display: inline-block;cursor: text;}
 
-.input_content_label {
-    width: 400px;
-    border: none;
-    height: 34px;
-    padding: 4px 12px;
-    display: inline-block;
-    cursor: text;
-}
+.input_content_label {width: 400px;border: none;height: 34px;padding: 4px 12px;display: inline-block;cursor: text;}
 
-.span_required {
-    color: #F2272D;
-    display: inline-block;
-    width: 20px;
-    height: 36px;
-    font-family: "宋体", "SimSun";
-}
+.span_required {color: #F2272D;display: inline-block;width: 20px;height: 36px;font-family: "宋体", "SimSun";}
 
-.div_bottom {
-    width: 100%;
-    text-align: center;
-}
+.div_bottom {width: 100%;text-align: center;}
 
-.input_bottom {
-    font-size: 14px;
-    width: 400px;
-    height: 35px;
-    cursor: pointer;
-    background: #bc6ba6;
-    z-index: 102;
-    color: #fff;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    margin-top: 7px;
-}
+.input_bottom {font-size: 14px;width: 400px;height: 35px;cursor: pointer;background: #bc6ba6;z-index: 102;color: #fff;border-radius: 4px;border: none;cursor: pointer;margin-top: 7px;}
 
-    .input_bottom:hover {
-        background-color: #ad5b97;
-    }
+.input_bottom:hover {background-color: #ad5b97}
 
-.Info {
-    font-family: 微软雅黑 !important;
-    vertical-align: middle !important;
-    text-align: left !important;
-    width: 250px;
-    padding-left: 10px;
-    padding-bottom: 10px
-}
+.Info {font-family: 微软雅黑 !important;vertical-align: middle !important;text-align: left !important;width: 250px;padding-left: 10px;padding-bottom: 10px}
