--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -38,7 +38,7 @@
                         <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
                         <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
                         <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
-                        <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
+                        @*<li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>*@
                         <li class="li_top_right_yhm" onclick="Exit()">退出</li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
             <li class="li_head_right" id="liWDXX">我的信息</li>
             <li class="li_head_right" id="liWDZH">我的账户</li>
             <li class="li_head_right" id="liWDZJ">我的资金</li>
-            <li class="li_head_right" id="liSHGJ">生活工具</li>
+            @*<li class="li_head_right" id="liSHGJ">生活工具</li>*@
         </ul>
         <span class="span_fbxx" id="span_fbxx">发布信息</span>
     </div>
@@ -108,7 +108,7 @@
                 <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_second" id="spanXJMXCX">明细查询</span></li>
                 <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_second" id="spanXJCZ">充值</span></li>
             </ul>
-            <ul id="ulSHGJ" class="ul_left_menu">
+            @*<ul id="ulSHGJ" class="ul_left_menu">
                 <li class="li_left_menu">
                     <span class="span_left_menu_first">生活工具</span>
                     <em class="em_left_menu"></em>
@@ -117,7 +117,7 @@
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanYXCZ">游戏充值</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWZCX">违章查询</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanJDYD">酒店预订</span></li>
-            </ul>
+            </ul>*@
         </div>
         <div id="div_row_rightContent" style="height: 100%; width: 900px; float: left; margin-left: 10px;">
             <iframe id="iframeright" style="border: none; width: 100%; height: 100%"></iframe>
