--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDFB.css
@@ -14,7 +14,7 @@
 
 .div_new_info {display: block;width: 100%;height: 184px;border: 1px solid #f0f0f0;}
 
-.div_new_info_head {height: 40px;background-color: #fafafa;padding: 9px 12px;}
+.div_new_info_head {height: 40px;background-color: #f8f8f8;padding: 9px 12px;border: 1px solid #f8f8f8;}
 
 .span_new_info_head {color: #898989;font-size: 14px;height: 24px;}
 
@@ -24,23 +24,23 @@
 
 .div_new_info_body {height: 144px;}
 
-.div_new_info_body_left {float: left;width: 370px;height: 144px;padding: 32px 30px;}
+.div_new_info_body_left {float: left;width: 370px;height: 144px;padding: 32px 15px;}
 
 .div_new_info_body_left_inner {width: 310px;height: 80px;}
 
-.div_new_info_body_left_inner_img {width: 90px;height: 77px;display: inline-block;vertical-align: middle;}
+.div_new_info_body_left_inner_img {width: 110px;height: 90px;display: inline-block;vertical-align: middle;}
 
-.img_new_info_body_left {width: 90px;height: 77px;background-size: 100%;background-repeat: no-repeat;background-position: center;}
+.img_new_info_body_left {width: 110px;height: 90px;background-size: 100%;background-repeat: no-repeat;background-position: center;}
 
-.div_new_info_body_left_inner_info {width: 200px;height: 77px;display: inline-block;vertical-align: middle;margin-left: 8px;padding-top: 5px;}
+.div_new_info_body_left_inner_info {width: 190px;height: 90px;display: inline-block;vertical-align: middle;margin-left: 8px;padding-top: 5px;}
 
-.span_new_info_body_left_bt {color: #313131;font-weight: 700;font-size: 13px;display: block;}
+.span_new_info_body_left_bt {color: #313131;font-weight: 700;font-size: 14px;display: block;height:43px;overflow:hidden;}
 
-.span_new_info_body_left_rq {color: #898989;font-size: 13px;display: block;}
+.span_new_info_body_left_rq {color: #898989;font-size: 14px;display: block;}
 
-.span_new_info_body_left_dh {font-size: 13px;display: block;margin-top:20px;}
+.span_new_info_body_left_dh {font-size: 14px;display: block;margin-top:20px;}
 
-.div_new_info_body_middle {float: left;width: 310px;height: 80px;margin-top: 37px;padding-left: 12px;border-left: 1px solid #e6e6e6;}
+.div_new_info_body_middle {float: left;width: 310px;height: 80px;margin-top: 37px;padding-left: 28px;border-left: 1px solid #e6e6e6;}
 
 .span_new_info_body_middle {margin-top: 5px;margin-left: 12px;width: 52px;height: 17px;font-size: 12px;display: block;}
 
@@ -54,11 +54,13 @@
 
 .div_no_info {width: 900px;height: 44px;padding: 10px 0 7px 10px;border-bottom: 1px solid #f1f1f1;border-top: 1px solid #f1f1f1;font-size: 12px;color: #000;text-align: center;}
 
-.span_new_info_body_middle_common {font-size: 12px;}
+.span_new_info_body_middle_common {font-size: 14px;display:inline-block;font-weight:700;}
 
-.span_new_info_body_middle_common_button:hover {color: #bc6ba6;}
+.span_new_info_body_middle_common_button:hover {color: #ad5b97;}
 
-.span_new_info_body_middle_status {color: #85bb43;display: block;}
+.green {color: #85bb43;}
+.red {color: #ff2233;}
+.purple {color:#bc6ba6;}
 
 .span_new_info_body_middle_read {display: block;margin-top: 2px;}
 
