--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
@@ -1,226 +1,87 @@
-﻿.wdfb_right_head {
-    width: 900px;
-    display: block;
-    height: 50px;
-    margin-top: 21px;
-}
+﻿.right_head {width: 900px;display: block;height: 50px;margin-top: 21px;}
 
-.divstep {
-    width: 130px;
-    text-align: center;
-    height: 40px;
-    float: left;
-    cursor: pointer;
-}
+.divstep {width: 130px;text-align: center;height: 40px;float: left;cursor: pointer;}
 
-.spanstep {
-    font-size: 14px;
-    margin-bottom: 5px;
-    line-height: 40px;
-    color: #cccccc;
-}
+.spanstep {font-size: 14px;margin-bottom: 5px;line-height: 40px;color: #cccccc;}
 
-.emstep {
-    width: 130px;
-    height: 1px;
-    float: left;
-    background: #cccccc;
-}
+.emstep {width: 130px;height: 1px;float: left;background: #cccccc;}
 
+.div_main_info {display: block;width: 100%;}
 
-.div_main_info {
-    display: block;
-    width: 100%;
-}
+.ul_new_info {padding-left: 0;}
 
-.ul_new_info {
-    padding-left: 0;
-}
+.li_new_info {margin-top: 10px;}
 
-.li_new_info {
-    margin-top: 10px;
-}
+.div_new_info {display: block;width: 100%;height: 184px;border: 1px solid #f0f0f0;}
 
-.div_new_info {
-    display: block;
-    width: 100%;
-    height: 184px;
-    border: 1px solid #f0f0f0;
-}
+.div_new_info_head {height: 40px;background-color: #f8f8f8;padding: 9px 12px;border: 1px solid #f8f8f8;}
 
-.div_new_info_head {
-    height: 40px;
-    background-color: #fafafa;
-    padding: 9px 12px;
-}
+.span_new_info_head {color: #898989;font-size: 14px;height: 24px;}
 
-.span_new_info_head {
-    color: #898989;
-    font-size: 12px;
-    height: 24px;
-}
+.span_new_info_edit {display:inline-block;float:right;width:40px;height:30px;background-image:url(../../images/HTGL/htgl_edit.png)}
 
-.div_new_info_body {
-    height: 144px;
-}
+.span_new_info_delete {display:inline-block;float:right;width:40px;height:30px;background-image:url(../../images/HTGL/htgl_delete.png)}
 
-.div_new_info_body_left {
-    float: left;
-    width: 370px;
-    height: 144px;
-    padding: 32px 30px;
-}
+.div_new_info_body {height: 144px;}
 
-.div_new_info_body_left_inner {
-    width: 310px;
-    height: 80px;
-}
+.div_new_info_body_left {float: left;width: 370px;height: 144px;padding: 32px 15px;}
 
-.div_new_info_body_left_inner_img {
-    width: 90px;
-    height: 77px;
-    display: inline-block;
-    vertical-align: middle;
-}
+.div_new_info_body_left_inner {width: 310px;height: 80px;}
 
-.img_new_info_body_left {
-    width: 90px;
-    height: 77px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+.div_new_info_body_left_inner_img {width: 110px;height: 90px;display: inline-block;vertical-align: middle;}
 
-.div_new_info_body_left_inner_info {
-    width: 200px;
-    height: 77px;
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 8px;
-    padding-top: 5px;
-}
+.img_new_info_body_left {width: 110px;height: 90px;background-size: 100%;background-repeat: no-repeat;background-position: center;}
 
-.span_new_info_body_left_bt {
-    color: #313131;
-    font-weight: 700;
-    font-size: 13px;
-    display: block;
-}
+.div_new_info_body_left_inner_info {width: 190px;height: 90px;display: inline-block;vertical-align: middle;margin-left: 8px;padding-top: 5px;}
 
-.span_new_info_body_left_rq {
-    color: #898989;
-    font-size: 13px;
-    display: block;
-}
+.span_new_info_body_left_bt {color: #313131;font-weight: 700;font-size: 14px;display: block;height:43px;overflow:hidden;}
 
-.span_new_info_body_left_dh {
-    font-size: 13px;
-    display: block;
-}
+.span_new_info_body_left_rq {color: #898989;font-size: 14px;display: block;}
 
-.div_new_info_body_middle {
-    float: left;
-    width: 310px;
-    height: 80px;
-    margin-top: 37px;
-    padding-left: 12px;
-    border-left: 1px solid #e6e6e6;
-}
+.span_new_info_body_left_dh {font-size: 14px;display: block;margin-top:20px;}
 
-.span_new_info_body_middle {
-    margin-top: 5px;
-    margin-left: 12px;
-    width: 52px;
-    height: 17px;
-    font-size: 12px;
-    display: block;
-}
+.div_new_info_body_middle {float: left;width: 310px;height: 80px;margin-top: 37px;padding-left: 28px;border-left: 1px solid #e6e6e6;}
 
-.div_new_info_body_right {
-    float: left;
-    width: 210px;
-    height: 80px;
-    margin-top: 37px;
-    border-left: 1px solid #e6e6e6;
-}
+.span_new_info_body_middle {margin-top: 5px;margin-left: 12px;width: 52px;height: 17px;font-size: 12px;display: block;}
 
-.span_new_info_body_right {
-    margin-top: 5px;
-    margin-left: 12px;
-    width: 52px;
-    height: 17px;
-    font-size: 12px;
-    display: block;
-}
+.div_new_info_body_right {float: left;width: 210px;height: 80px;margin-top: 37px;border-left: 1px solid #e6e6e6;}
 
-.active {
-    cursor: pointer;
-    color: #bc6ba6;
-}
+.span_new_info_body_right {margin-top: 5px;margin-left: 12px;width: 52px;height: 17px;font-size: 12px;display: block;}
 
-    .active:hover {
-        color: #bc6ba6;
-    }
+.active {cursor: pointer;color: #bc6ba6;}
 
-.div_no_info {
-    width: 900px;
-    height: 44px;
-    padding: 10px 0 7px 10px;
-    border-bottom: 1px solid #f1f1f1;
-    border-top: 1px solid #f1f1f1;
-    font-size: 12px;
-    color: #000;
-    text-align: center;
-}
+.active:hover {color: #bc6ba6}
 
-.span_new_info_body_middle_common {
-    font-size: 12px;
-}
+.div_no_info {width: 900px;height: 44px;padding: 10px 0 7px 10px;border-bottom: 1px solid #f1f1f1;border-top: 1px solid #f1f1f1;font-size: 12px;color: #000;text-align: center;}
 
-.span_new_info_body_middle_common_button:hover {
-    color: #bc6ba6;
-}
+.span_new_info_body_middle_common {font-size: 14px;display:inline-block;font-weight:700;}
 
-.span_new_info_body_middle_status {
-    color: #85bb43;
-    display: block;
-}
+.span_new_info_body_middle_common_button:hover {color: #ad5b97;}
 
-.span_new_info_body_middle_read {
-    display: block;
-    margin-top: 2px;
-}
+.green {color: #85bb43;}
+.red {color: #ff2233;}
+.purple {color:#bc6ba6;}
 
-.span_new_info_body_middle_tip {
-    display: block;
-    margin-top: 2px;
-}
+.span_new_info_body_middle_read {display: block;margin-top: 2px;}
 
-.span_new_info_body_middle_update {
-    cursor: pointer;
-    padding-left: 28px;
-    margin-top: 20px;
-    display: inline-block;
-    color: #bc6ba6;
-}
+.span_new_info_body_middle_tip {display: block;margin-top: 2px;}
 
-.span_new_info_body_middle_refresh {
-    cursor: pointer;
-    padding-left: 12px;
-    display: inline-block;
-    color: #bc6ba6;
-}
+.span_new_info_body_middle_update {cursor: pointer;padding-left: 28px;margin-top: 20px;display: inline-block;color: #bc6ba6;}
 
-.span_new_info_body_middle_top {
-    cursor: pointer;
-    padding-left: 12px;
-    display: inline-block;
-    color: #bc6ba6;
-}
+.span_new_info_body_middle_refresh {cursor: pointer;padding-left: 12px;display: inline-block;color: #bc6ba6;}
 
-.span_new_info_body_middle_delete {
-    cursor: pointer;
-    padding-left: 12px;
-    display: inline-block;
-    color: #bc6ba6;
-}
+.span_new_info_body_middle_top {cursor: pointer;padding-left: 12px;display: inline-block;color: #bc6ba6;}
+
+.span_new_info_body_middle_delete {cursor: pointer;padding-left: 12px;display: inline-block;color: #bc6ba6;}
+
+.div_main_info_bottom {background-color: #fff;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
+
+.span_main_info_bottom {font-size: 12px;margin-left: 8px;margin-top: 2px;float: left;}
+
+.div_main_info_bottom_fy {float: right;}
+
+.a_main_info_bottom_fy {line-height: 18px;cursor: pointer;text-decoration: none;font-size: 12px;background-color: #ffffff;border: 1px solid #dee3e7;padding: 2px 6px;display: inline-block;margin: 0 6px;color: #333;}
+
+.a_main_info_bottom_fy_current {background-color: #bc6ba6;color: #ffffff;}
+
+.a_main_info_bottom_fy:hover {background-color: #bc6ba6;text-decoration: none;color: #ffffff;}
