--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -1,43 +1,28 @@
 ﻿@{
-    ViewBag.Title = "WDFB";
     Layout = "~/Areas/Business/Views/Shared/QT.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-
-
+@section Section_Head {
     <link href="@Url.Content("~/Areas/Business/Css/HTGL/WDXX/WDFB.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTGL/WDXX/WDFB.js")"></script>
-</head>
-<body>
+}
+@section Section_Body {
     <div class="right_head">
         <div class="divstep" id="divZJFBXX">
-            <span class="spanstep" id="spanZJFBXX">最近发布信息</span>
+            <span class="spanstep" id="spanZJFBXX">正常显示的信息</span>
             <em class="emstep" id="emZJFBXX"></em>
-        </div>
-        <div class="divstep" id="divXSZXX">
-            <span class="spanstep" id="spanXSZXX">显示中的信息</span>
-            <em class="emstep" id="emXSZXX"></em>
         </div>
         <div class="divstep" id="divDSHXX">
             <span class="spanstep" id="spanDSHXX">待审核的信息</span>
             <em class="emstep" id="emDSHXX"></em>
         </div>
         <div class="divstep" id="divYSCXX">
-            <span class="spanstep" id="spanYSCXX">已删除的信息</span>
+            <span class="spanstep" id="spanYSCXX">已隐藏的信息</span>
             <em class="emstep" id="emYSCXX"></em>
-        </div>
-        <div class="divstep" id="divWXSXX">
-            <span class="spanstep" id="spanWXSXX">未显示的信息</span>
-            <em class="emstep" id="emWXSXX"></em>
         </div>
         <div class="divstep">
             <span class="spanstep" id="spanOther">&nbsp;</span>
-            <em class="emstep" id="emOther" style="width: 250px;"></em>
+            <em class="emstep" id="emOther" style="width: 510px;"></em>
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
@@ -46,5 +31,4 @@
         <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
         </div>
     </div>
-</body>
-</html>
+}
