--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
@@ -19,3 +19,15 @@
 .div_top .div_top_right .div_top_right_inner .span_top_right_sjdl {background-image: url(../images/cellphone.png);background-size: 100%;width: 12px;height: 21px;margin: -3px 5px 0 5px;display: inline-block;float: left;}
 .div_top .div_top_right .div_top_right_inner .span_top_right_yhm {background-image: url(../images/arrow_down.png);width: 12px;height: 18px;margin: 0px 5px 0 5px;float: left;}
 .div_top .div_top_right .div_top_right_inner .span_top_right_yhm_text {margin-left: 5px;color: #bc6ba6;font-weight: 700;}
+
+.a_yhm {color:#bc6ba6;margin-left:5px;cursor:pointer;text-decoration:none;}
+.a_yhm:hover {text-decoration:none;color:#bc6ba6;}
+.a_yhm_tip {color:#666666;cursor:default;}
+.a_yhm_tip:hover {text-decoration:none;color:#666666;}
+
+
+.div_top_right_dropdown_yhm {top: 0;left: 0;display: none;}
+.div_top_right_dropdown_yhm .ul_top_right_yhm {width: 70px;height: 150px;padding-left: 0px;margin-top: 0 !important;}
+.div_top_right_dropdown_yhm .ul_top_right_yhm .li_top_right_yhm {width: 70px;height: 30px;color: #333333;font-size: 12px;text-align: left;background-color: #ffffff;padding: 5px 5px;}
+.div_top_right_dropdown_yhm .ul_top_right_yhm .li_top_right_yhm:hover {background: #ececec;color: #333333;}
+.span_top_right_yhm {background-image: url(../images/arrow_down.png);width: 12px;height: 18px;margin: 0px 5px 0 5px;float: right;}
