--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
@@ -28,9 +28,12 @@
         <div id="div_XZQ" class="div_dropdown">
         </div>
         <div class="div_top_right">
+            <input id="input_yhm" type="hidden" value="@ViewData["YHM"]" />
             <span id="span_dl" class="span_top_right">
                 您好，请登录
             </span>
+            <div id="div_yhm" class="span_top_right">
+            </div>
             <span class="span_top_right_split"></span>
             <span id="span_zc" class="span_top_right">
                 免费注册
