--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -29,12 +29,15 @@
         <div id="div_XZQ" class="div_dropdown">
         </div>
         <div class="div_top_right">
+            <input id="input_yhm" type="hidden" value="@ViewData["YHM"]" />
             <span id="span_dl" class="span_top_right">
-                登录
+                您好，请登录
             </span>
-            <span class="span_top_right_fg">/</span>
+            <div id="div_yhm" class="span_top_right">
+            </div>
+            <span class="span_top_right_split"></span>
             <span id="span_zc" class="span_top_right">
-                注册
+                免费注册
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_grzx" class="span_top_right">
