--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -106,7 +106,7 @@
                 </li>
                 @*<li id="li_left_menu_XJ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanXJ">我的现金</span><img id="imgXJ" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>*@
                 <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_second" id="spanXJMXCX">明细查询</span></li>
-                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_second" id="spanXJCZ">充值</span></li>
+                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_second" id="spanXJCZ">充值管理</span></li>
             </ul>
             @*<ul id="ulSHGJ" class="ul_left_menu">
                 <li class="li_left_menu">
