--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDSC/WDSC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDSC/WDSC.cshtml
@@ -12,15 +12,19 @@
             <span class="spanstep" id="spanSCXX">收藏的信息</span>
             <em class="emstep" id="emSCXX"></em>
         </div>
-        <div class="divstep" id="divLLGXX">
-            <span class="spanstep" id="spanLLGXX">浏览过的信息</span>
-            <em class="emstep" id="emLLGXX"></em>
-        </div>
+        @*<div class="divstep" id="divLLGXX">
+                <span class="spanstep" id="spanLLGXX">浏览过的信息</span>
+                <em class="emstep" id="emLLGXX"></em>
+            </div>*@
         <div class="divstep">
             <span class="spanstep" id="spanOther">&nbsp;</span>
-            <em class="emstep" id="emOther" style="width: 650px;"></em>
+            <em class="emstep" id="emOther" style="width: 780px;"></em>
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
+    </div>
+    <div class="div_main_info_bottom">
+        <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
+        </div>
     </div>
 }
