--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -69,7 +69,7 @@
                 </li>
                 <li id="li_left_menu_WDFB" class="li_left_menu"><span class="span_left_menu_second" id="spanWDFB">我的发布</span></li>
                 <li id="li_left_menu_WDSC" class="li_left_menu"><span class="span_left_menu_second" id="spanWDSC">我的收藏</span></li>
-                <li id="li_left_menu_WDQZ" class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span></li>
+                @*<li id="li_left_menu_WDQZ" class="li_left_menu"><span class="span_left_menu_second" id="spanWDQZ">我的求职</span></li>
                 <li id="li_left_menu_WDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanWDJL">我的简历</span></li>
                 <li id="li_left_menu_TDJL" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanTDJL">投递记录</span></li>
                 <li id="li_left_menu_GZYQ" class="li_left_menu"><span class="span_left_menu_third WDQZ_child" id="spanGZYQ">工作邀请</span></li>
@@ -85,7 +85,7 @@
                 <li id="li_left_menu_YXZJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanYXZJL" style="margin-left: 35px">已下载简历</span></li>
                 <li id="li_left_menu_FSMSYQ" class="li_left_menu" style="width: 150px"><span id="spanFSMSYQ" class="span_left_menu_four JLGL_child" style="margin-left: 40px">发送的面试邀请</span></li>
                 <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third" /><span id="spanZHXX" class="span_left_menu_third WDZP_child">账号信息</span></li>
-                <li id="li_left_menu_GSZL" class="li_left_menu"><span id="spanGSZL" class="span_left_menu_four ZHXX_child">公司资料</span></li>
+                <li id="li_left_menu_GSZL" class="li_left_menu"><span id="spanGSZL" class="span_left_menu_four ZHXX_child">公司资料</span></li>*@
                 <li id="li_left_menu_BZZX" class="li_left_menu"><span class="span_left_menu_second" id="spanBZZX">帮助中心</span></li>
             </ul>
             <ul id="ulWDZH" class="ul_left_menu">
